# BetterCalendar-API

./: .gitignore  Dockerfile  README.md  dev-setup.sh  pyproject.toml  requirements.txt  requirements2.txt  run  setup  setup-populate.sh  setup.sh
.github/workflows/: azure-container-webapp.yml  basic-test.yml  django.yml  docker-image-push.yml  docker-image-run  docker-image-run.yml  docker-image.yml  docker-run-on-push.yml  full-test.yml  main.yml  test.yml
config/: db.sqlite3
config/API/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
config/API/custom/: generic_permission_view_set.py
config/API/knox_migrations/: 0002_auto_20150916_1425.py  0003_auto_20150916_1526.py
config/API/management/commands/: faker_data.py  populate.py
config/API/migrations/: 0001_initial.py  0002_activity_user_delete_location_delete_userdata_and_more.py  0002_remove_salt_index.py  0002_remove_user_first_name_remove_user_last_name_and_more.py  0003_alter_activity_date_end_alter_activity_date_start.py  0004_activity_is_planned_alter_activity_length.py  0005_alter_activity_importance_level_alter_category_color_and_more.py  0006_remove_activity_is_planned_and_more.py
config/config/: settings.py  urls.py
